# firo

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: cli.rs  engine.rs  errors.rs  main.rs
sample-contract/: Cargo.toml
sample-contract/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
src/: cli.rs  main.rs
