[workspace.package]
name = "firo"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasmtime = { version = "30.0.2", features = ["runtime"] }
serde_json = "1.0.136"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.11"
clap = { version = "4.5.32", features = ["derive"] }

sdk = { path = "./sdk" }

[workspace]
resolver = "3"
members = ["sample-contract", "sdk", "core"]
